# brownie-proxy-workaround

./: .gitignore  LICENSE  README.md  brownie-config.yml  pyproject.toml
contracts/: Dogs.sol  DogsUpdated.sol  Proxy.sol  Storage.sol  Token.sol  TokenProxy.sol
tests/: fixtures.py  proxy.py
